# joytrunk

./: .gitignore  AGENTS.md  README.md  agent.md  product.md
cli/: .env.example  README.md  mkdocs.yml  pyproject.toml  run_tests.ps1
cli/joytrunk/: __init__.py  api_client.py  cli.py  config_schema.py  config_store.py  default_config.py  env_loader.py  i18n.py  onboard.py  paths.py
cli/joytrunk/agent/: __init__.py  context.py  employee_config.py  loop.py  provider.py  run_log.py  session.py
cli/joytrunk/docs/: CLI_USAGE.md  chat.md  employee.md  gateway.md  index.html  index.md  language.md  onboard.md  server.md  status.md
cli/joytrunk/gateway/: package-lock.json  package.json  server.js
cli/joytrunk/locales/: __init__.py  en.py  zh.py
cli/joytrunk/server/: package-lock.json  package.json  server.js
cli/joytrunk/templates/: SYSTEM_PROMPT.md  TOOLS.md
cli/joytrunk/tools/: __init__.py  base.py  exec_tool.py  filesystem.py  mcp.py  memory_tools.py  registry.py  web.py
cli/joytrunk/tui/: __init__.py  chat_app.py  clack_flows.py  entry_app.py  language_picker.py  panel_style.py
cli/site/: 404.html  index.html  sitemap.xml
cli/tests/: __init__.py  conftest.py  test_agent_context.py  test_agent_employee_config.py  test_agent_loop.py  test_agent_loop_tool_invocation.py  test_agent_provider.py  test_agent_session.py  test_chat_integration.py  test_clack_flows.py  test_cli_onboard.py  test_config_store.py  test_env_loader.py  test_i18n.py  test_memory.py  test_memory_conversation.py  test_paths.py  test_paths_and_onboard.py  test_tools.py  test_tui_entry.py
(+102 files in other folders)
