[project]
name = "joytrunk"
version = "0.1.0"
description = "JoyTrunk（喜象 Agent）- 本地 7×24 智能体员工，负责人通过即时通讯与员工交互"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "JoyTrunk contributors" }]
keywords = ["ai", "agent", "joytrunk", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer>=0.12.0,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "httpx>=0.27.0,<1.0.0",
    "textual>=0.40.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "ruff>=0.1.0",
    "mkdocs>=1.5.0,<2.0.0",
]

[project.scripts]
joytrunk = "joytrunk.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["joytrunk"]

[tool.hatch.build.targets.wheel.force-include]
"joytrunk/templates" = "joytrunk/templates"
"joytrunk/gateway" = "joytrunk/gateway"
"joytrunk/docs" = "joytrunk/docs"
"joytrunk/ui" = "joytrunk/ui"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
